update docs to reference tulsa and local npm

--- a/site/london-pcn-data.html
+++ b/site/london-pcn-data.html
@@ -26,7 +26,8 @@
     }
   </style>
   <script src="https://d3js.org/d3.v5.min.js"></script>
-  <script src="https://unpkg.com/@aftertheflood/londonsquared@0.1.1/dist/index.js"></script>
+  <script src="../dist/index.js"></script>
+  <!-- <script src="https://unpkg.com/@aftertheflood/londonsquared@0.1.1/dist/index.js"></script> -->
 </head>
 <body>
 <h1>London penalty charge notices by borough</h1>
