--- a/site/london-borough-population-interactive.html
+++ b/site/london-borough-population-interactive.html
@@ -73,7 +73,7 @@
   <script src="../dist/index.js"></script>
 </head>
 <body>
-<h1>Historical London population by borough</h1>
+<h1>Historical Tulsa population by borough</h1>
 <p class="subtitle">Census data 1801 &ndash; 2011</p>
 <p>This example illustrates how you might use the After the Flood <a href="https://github.com/aftertheflood/londonsquared">London Squared</a> module for D3 to visualise time series data across all London boroughs.</p>
 <div class="vizualisation-container"></div>
