--- a/site/london-borough-population-interactive.html
+++ b/site/london-borough-population-interactive.html
@@ -70,7 +70,7 @@
     }
   </style>
   <script src="https://d3js.org/d3.v5.min.js"></script>
-  <script src="../dist/index.js"></script>
+  <script src="https://unpkg.com/tulsasquared@0.1.0/dist/index.js"></script>
 </head>
 <body>
 <h1>Historical Tulsa population by borough</h1>
