--- a/site/tulsa-zip-demographics.html
+++ b/site/tulsa-zip-demographics.html
@@ -43,9 +43,9 @@
   <script src="../dist/index.js"></script>
 </head>
 <body>
-  <h1>Tulsa population by borough</h1>
-  <p class="subtitle">GLA Population Estimate 2025 (thousands)</p>
-  <p>This example illustrates how you might use the After the Flood <a href="https://github.com/aftertheflood/londonsquared">London Squared</a> module for D3 to visualise a single variable accross all London boroughs.</p>
+  <h1>Tulsa Demographics By Zip</h1>
+  <p>This example illustrates how you might use Tulsa Software's <a href="https://github.com/thompcd/londonsquared">Tulsa Squared</a> module for D3 to visualise a single variable across the districts of Tulsa.</p>
+  <p>This is an adaptation of After The Flood's original work <a href="https://github.com/aftertheflood/londonsquared">London Squared</a>.</p>
   
   <div class="control-panel">
     <label for="column-selector">Select data to display:</label>
