change plot color of demographics. Make data titles human readable

--- a/site/tulsa-zip-demographics.html
+++ b/site/tulsa-zip-demographics.html
@@ -89,7 +89,7 @@ window.onload = () => {
           .attr('r', d => circleScale(d.data[property]))
           .attr('cx', LS.centroid()[0])
           .attr('cy', LS.centroid()[1])
-          .attr('fill', '#f00');
+          .attr('fill', '#1A6B96');
       });
     
     LS.foreground()
