fix default selection

--- a/site/tulsa-zip-demographics.html
+++ b/site/tulsa-zip-demographics.html
@@ -43,7 +43,7 @@
   <script src="../dist/index.js"></script>
 </head>
 <body>
-  <h1>Tulsa Demographics By Zip</h1>
+  <h1>Green Country Demographics</h1>
   <p>This example illustrates how you might use Tulsa Software's <a href="https://github.com/thompcd/londonsquared">Tulsa Squared</a> module for D3 to visualise a single variable across the districts of Tulsa.</p>
   <p>This is an adaptation of After The Flood's original work <a href="https://github.com/aftertheflood/londonsquared">London Squared</a>.</p>
   
@@ -60,7 +60,7 @@ window.onload = () => {
   const height = 525;
 
   // Initial property to plot
-  let plottedProperty = 'medianHomeValue';
+  let plottedProperty = 'Population';
 
   const svg = d3.select('.vizualisation-container')
     .append('svg')
