--- a/site/tulsa-zip-demographics.html
+++ b/site/tulsa-zip-demographics.html
@@ -5,19 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
-      font-family: 'Inter', sans-serif;
+      font-family: 'Inter',sans-serif;
       color: #333333;
       margin: 0;
       padding: 20px;
-      box-sizing: border-box;
     }
 
     h1 {
-      font-family: 'Playfair Display', serif;
+      font-family: 'Montserrat', serif;
       font-weight: 700;
       color: black;
-      font-size: clamp(1.8rem, 5vw, 2.5rem);
-      margin-top: 0.5rem;
     }
 
     p {
@@ -107,7 +104,8 @@
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Montserrat:wght@400;500;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+  
   <script src="../dist/index.js"></script>
 </head>
 <body>
