--- a/site/tulsa-zip-population.html
+++ b/site/tulsa-zip-population.html
@@ -2,8 +2,17 @@
 <html>
 <head>
   <style>
-    body{
-      font-family: sans-serif;
+    body {
+      font-family: 'Inter',sans-serif;
+      color: #333333;
+      margin: 0;
+      padding: 20px;
+    }
+
+    h1 {
+      font-family: 'Montserrat', serif;
+      font-weight: 700;
+      color: black;
     }
 
     p{
@@ -25,6 +34,14 @@
   </style>
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script src="../dist/index.js"></script>
+
+    <!-- Google Fonts preconnect for faster loading -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    
+    <!-- Import Inter, Playfair Display, and add Montserrat -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Montserrat:wght@400;500;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+    
 </head>
 <body>
 <h1>Tulsa population by borough</h1>
