--- a/site/index.html
+++ b/site/index.html
@@ -105,8 +105,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Montserrat:wght@400;500;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
-  
-  <script src="../dist/index.js"></script>
+  <script src="https://unpkg.com/tulsasquared@0.2.0/dist/index.js"></script>
+  <!-- <script src="../dist/index.js"></script> -->
 </head>
 <body>
   <h1>Green Country Demographics</h1>
