--- a/site/samples/london-borough-population-now.html
+++ b/site/samples/london-borough-population-now.html
@@ -24,11 +24,12 @@
     }
   </style>
   <script src="https://d3js.org/d3.v5.min.js"></script>
-  <script src="../dist/index.js"></script>
+  <script src="https://unpkg.com/tulsasquared@0.2.0/dist/index.js"></script>
+  <!-- <script src="../dist/index.js"></script> -->
 </head>
 <body>
-<h1>Tulsa population by borough</h1>
-<p class="subtitle">GLA Population Estimate 2025 (thousands)</p>
+<h1>London population by borough</h1>
+<p class="subtitle">GLA Population Estimate 2015 (thousands)</p>
 <p>This example illustrates how you might use the After the Flood <a href="https://github.com/aftertheflood/londonsquared">London Squared</a> module for D3 to visualise a single variable accross all London boroughs.</p>
 <div class="vizualisation-container"></div>
 </body>
@@ -42,7 +43,7 @@ window.onload = ()=>{
     .attr('width', width)
     .attr('height', height);
 
-  d3.csv('data/tulsa-zip-homevalues.csv')
+  d3.csv('data/london-borough-profiles.csv')
     .then((data)=>{
       console.log(data);
 
@@ -56,7 +57,7 @@ window.onload = ()=>{
       svg.call(LS); // draw the cartogram shapes
       
       const circleScale = d3.scalePow()
-        .domain([0, d3.max(data, d => Number(d['medianHomeValue']))])
+        .domain([0, d3.max(data, d => Number(d['GLA Population Estimate 2015']))])
         .range([0, LS.blockSize()/2])
 
       console.log(circleScale.domain(), circleScale.range());
@@ -66,7 +67,7 @@ window.onload = ()=>{
           parent.append('circle')
             .attr('r', d => {
               console.log(d); 
-              return circleScale(d.data['medianHomeValue'])
+              return circleScale(d.data['GLA Population Estimate 2015'])
             })
             .attr('cx', LS.centroid()[0])
             .attr('cy', LS.centroid()[1])
@@ -85,7 +86,7 @@ window.onload = ()=>{
             .attr('class', 'borough-label')
             .attr('x', 5)
             .attr('y', LS.blockSize()-5)
-            .text(d => `${d.data['medianHomeValue']/1000}k`);
+            .text(d => `${d.data['GLA Population Estimate 2015']/1000}k`);
         })
     })
     .catch(err=>{
