update links in description

--- a/site/index.html
+++ b/site/index.html
@@ -110,7 +110,7 @@
 </head>
 <body>
   <h1>Green Country Demographics</h1>
-  <p>This example illustrates how you might use Tulsa Software's <a href="https://github.com/thompcd/londonsquared">Tulsa Squared</a> module for D3 to visualise a single variable across the districts of Tulsa.</p>
+  <p>This example illustrates how you might use <a href="https://github.com/thompcd/londonsquared">Tulsa Software's</a> <a href="https://www.npmjs.com/package/tulsasquared">Tulsa Squared NPM package</a> in combination with <a href="https://d3js.org/">D3.js</a> to visualize data across the districts of Tulsa.</p>
   <p class="subtitle">This is an adaptation of After The Flood's original work <a href="https://github.com/aftertheflood/londonsquared">London Squared</a>.</p>
   
   <div class="control-panel">
