--- a/site/samples/london-borough-population-interactive.html
+++ b/site/samples/london-borough-population-interactive.html
@@ -70,10 +70,10 @@
     }
   </style>
   <script src="https://d3js.org/d3.v5.min.js"></script>
-  <script src="https://unpkg.com/@aftertheflood/londonsquared@0.1.1/dist/index.js"></script>
+  <script src="https://unpkg.com/tulsasquared@0.1.0/dist/index.js"></script>
 </head>
 <body>
-<h1>Historical London population by borough</h1>
+<h1>Historical Tulsa population by borough</h1>
 <p class="subtitle">Census data 1801 &ndash; 2011</p>
 <p>This example illustrates how you might use the After the Flood <a href="https://github.com/aftertheflood/londonsquared">London Squared</a> module for D3 to visualise time series data across all London boroughs.</p>
 <div class="vizualisation-container"></div>
